<resources>
    <string name="app_name">StepMan</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Begin</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="name">Jon</string>
    <string name="title_activity_profile1">ProfileActivity1</string>
    <string name="step_counter">
         android.hardware.sensor.stepcounter
   </string>
    <string name="step_detector">
         android.hardware.sensor.stepdetector
   </string>
    <string name="title_activity_main_tabbed">StepMan</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Stats -->
    <string name="hp">HP</string>
    <string name="strength">Strength</string>
    <string name="defense">Defense</string>
    <string name="magic">Magic</string>
    <string name="magicDef">Magic Def</string>
    <string name="speed">Speed</string>


</resources>