<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/pagebackground"
    tools:context="jonathanmanos.stepman.MainTabbedActivity$PlaceholderFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="20"
            android:background="@drawable/box_settings"
            android:orientation="horizontal"
            android:layout_margin="5pt">

            <TextView
                android:id="@+id/mystatlevelview"
                android:text="Level: 1"
                android:textSize="14pt"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/statPoints"
                android:text="Pts: "
                android:textSize="12pt"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="9"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:background="@drawable/box_settings"
            android:layout_marginLeft="5pt"
            android:layout_marginRight="5pt"
            android:layout_marginBottom="5pt">

            <TextView
                android:text="@string/hp"
                android:textSize="12pt"
                android:layout_weight="9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/statHP"
                android:text="10"
                android:textSize="12pt"
                android:layout_gravity="right"
                android:layout_weight="14"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5px"
                android:layout_marginTop="4px"
                android:layout_weight="18">
                <Button
                    android:id="@+id/buttonHP"
                    android:text="+"
                    android:textColor="@color/black"
                    android:background="@drawable/button"
                    android:textSize="12pt"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:onClick="onClickAddHP"
                    android:enabled="false" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:background="@drawable/box_settings"
            android:layout_marginLeft="5pt"
            android:layout_marginRight="5pt"
            android:layout_marginBottom="5pt">

            <TextView
                android:text="@string/strength"
                android:textSize="12pt"
                android:layout_weight="9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/statStrength"
                android:text="10"
                android:textSize="12pt"
                android:layout_gravity="right"
                android:layout_weight="14"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5px"
                android:layout_marginTop="4px"
                android:layout_weight="18">
                <Button
                    android:id="@+id/buttonStrength"
                    android:text="+"
                    android:textColor="@color/black"
                    android:background="@drawable/button"
                    android:textSize="12pt"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:onClick="onClickAddStrength"
                    android:enabled="false" />
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:background="@drawable/box_settings"
            android:layout_marginLeft="5pt"
            android:layout_marginRight="5pt"
            android:layout_marginBottom="5pt">

            <TextView
                android:text="@string/defense"
                android:textSize="12pt"
                android:layout_weight="9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/statDefense"
                android:text="10"
                android:textSize="12pt"
                android:layout_gravity="right"
                android:layout_weight="14"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5px"
                android:layout_marginTop="4px"
                android:layout_weight="18">
                <Button
                    android:id="@+id/buttonDefense"
                    android:text="+"
                    android:textColor="@color/black"
                    android:background="@drawable/button"
                    android:textSize="12pt"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:onClick="onClickAddDefense"
                    android:enabled="false" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:background="@drawable/box_settings"
            android:layout_marginLeft="5pt"
            android:layout_marginRight="5pt"
            android:layout_marginBottom="5pt">

            <TextView
                android:text="@string/magic"
                android:textSize="12pt"
                android:layout_weight="9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/statMagic"
                android:text="10"
                android:textSize="12pt"
                android:layout_gravity="right"
                android:layout_weight="14"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5px"
                android:layout_marginTop="4px"
                android:layout_weight="18">
                <Button
                    android:id="@+id/buttonMagic"
                    android:text="+"
                    android:textColor="@color/black"
                    android:background="@drawable/button"
                    android:textSize="12pt"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:onClick="onClickAddMagic"
                    android:enabled="false" />
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:background="@drawable/box_settings"
            android:layout_marginLeft="5pt"
            android:layout_marginRight="5pt"
            android:layout_marginBottom="5pt">

            <TextView
                android:text="@string/magicDef"
                android:textSize="12pt"
                android:layout_weight="9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/statMagicDef"
                android:text="10"
                android:textSize="12pt"
                android:layout_gravity="right"
                android:layout_weight="14"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5px"
                android:layout_marginTop="4px"
                android:layout_weight="18">
                <Button
                    android:id="@+id/buttonMagicDef"
                    android:text="+"
                    android:textColor="@color/black"
                    android:background="@drawable/button"
                    android:textSize="12pt"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:onClick="onClickAddMagicDef"
                    android:enabled="false" />
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:background="@drawable/box_settings"
            android:layout_marginLeft="5pt"
            android:layout_marginRight="5pt"
            android:layout_marginBottom="5pt">

            <TextView
                android:text="@string/speed"
                android:textSize="12pt"
                android:layout_weight="9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/statSpeed"
                android:text="10"
                android:textSize="12pt"
                android:layout_gravity="right"
                android:layout_weight="14"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5px"
                android:layout_marginTop="4px"
                android:layout_weight="18">
                <Button
                    android:id="@+id/buttonSpeed"
                    android:text="+"
                    android:textColor="@color/black"
                    android:background="@drawable/button"
                    android:textSize="12pt"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:onClick="onClickAddSpeed"
                    android:enabled="false" />
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="16"
            android:orientation="vertical">
            <Button
                android:id="@+id/buttonpointadjustor"
                android:text="Adjust Points To Add: 1"
                android:background="@drawable/menu_button"
                android:textSize="12pt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="4pt"
                android:clickable="true"
                android:onClick="changePointSpendAmount"
                android:enabled="true" />
            <Button
                android:text="Reset Points"
                android:background="@drawable/reset_button2"
                android:textSize="12pt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="4pt"
                android:clickable="true"
                android:onClick="resetStatPoints"
                android:enabled="true" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
